unpackaged/main/default/objects/fferpcore__fflib_BatchProcess__c/fields/fferpcore__BatchControlRecordID__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__BatchControlRecordID__c</fullName>
    <label>Batch Control Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>