unpackaged/main/default/objects/fferpcore__fflib_BatchProcess__c/fields/fferpcore__FailedRecordID__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__FailedRecordID__c</fullName>
    <label>Failed Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>