unpackaged/main/default/objects/fferpcore__fflib_BatchProcess__c/fields/fferpcore__FromProgressBar__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__FromProgressBar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Progress Bar</label>
    <type>Checkbox</type>
</CustomField>