unpackaged/main/default/objects/fferpcore__fflib_BatchProcess__c/fields/fferpcore__ProcessName__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ProcessName__c</fullName>
    <label>Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>