unpackaged/main/default/objects/fferpcore__fflib_BatchProcess__c/fields/fferpcore__ProgressInformation__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ProgressInformation__c</fullName>
    <label>Progress Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>