unpackaged/main/default/objects/fferpcore__fflib_BatchProcess__c/fields/fferpcore__SuccessfulRecordID__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__SuccessfulRecordID__c</fullName>
    <label>Successful Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>