unpackaged/main/default/objects/fferpcore__fflib_BatchProcess__c/fields/fferpcore__TotalChainNumber__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TotalChainNumber__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Deprecated: Total Chain Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>