unpackaged/main/default/objects/fferpcore__fflib_BatchProcess__c/fields/fferpcore__UseDefaultConstructor__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__UseDefaultConstructor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Default Constructor</label>
    <type>Checkbox</type>
</CustomField>