unpackaged/main/default/objects/fferpcore__fflib_BatchProcess__c/listViews/fferpcore__All.listView-meta.xml
<ListView>
    <fullName>fferpcore__All</fullName>
    <columns>NAME</columns>
    <columns>fferpcore__Status__c</columns>
    <columns>fferpcore__ApexJobClassName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>